# learn-open-gl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Resources/Shaders/: RectangleWithTexture.glsl  Triangle.glsl  _template.glsl
Resources/Shaders/Lessons/rectangle/: fragment.glsl  vertex.glsl
Resources/Shaders/Lessons/triangle/: vertex.glsl
src/: main.cpp
src/Core/: Application.cpp  Application.h  Core.h  IndexBuffer.cpp  IndexBuffer.h  Library.cpp  Library.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Lessons/circle/: main.cpp
src/Lessons/cube/: main.cpp
src/Lessons/rectangle/: main.cpp
src/Lessons/triangle/: main.cpp
src/Practice/: main.cpp
